@@ -3,7 +3,7 @@ use strict;
 
 use Data::Dumper;
 use Labyrinth::Test::Harness;
-use Test::More tests => 44;
+use Test::More tests => 48;
 
 my (undef,undef,undef,undef,undef,$year) = localtime(time);
 $year += 1900;
@@ -249,7 +249,7 @@ my $res = $loader->prep(
 diag($loader->error)    unless($res);
 
 SKIP: {
-    skip "Unable to prep the test environment", 44  unless($res);
+    skip "Unable to prep the test environment", 48  unless($res);
 
     $res = is($loader->labyrinth(@plugins),1);
     diag($loader->error)    unless($res);
@@ -411,6 +411,24 @@ SKIP: {
     #diag("admin3 vars=".Dumper($vars->{data}));
     is_deeply($vars->{data},$test_data->{admin3},'admin list variables are as expected');
 
+
+    # Page Selection
+    $loader->clear;
+    $loader->refresh( \@plugins );
+    $res = is($loader->action('Album::Pages::Selection'),1);
+    diag($loader->error)    unless($res);
+    $vars = $loader->vars;
+    diag("selection1 vars=".Dumper($vars->{ddpages}));
+    is($vars->{ddpages},'<select id="pageid" name="pageid"><option value="0">Select Gallery Page</option><option value="4">A New Page</option><option value="2">An Updated Page</option><option value="3">Test Page</option><option value="1" selected="selected">Archive</option></select>','selection retrieved successfully');
+
+    # Named Page Selection
+    $loader->clear;
+    $loader->refresh( \@plugins, { data => { pageid => 3 } } );
+    $res = is($loader->action('Album::Pages::Selection'),1);
+    diag($loader->error)    unless($res);
+    $vars = $loader->vars;
+    diag("selection2 vars=".Dumper($vars->{ddpages}));
+    is($vars->{ddpages},'<select id="pageid" name="pageid"><option value="0">Select Gallery Page</option><option value="4">A New Page</option><option value="2">An Updated Page</option><option value="3" selected="selected">Test Page</option><option value="1">Archive</option></select>','selection retrieved successfully');
 
     
     # -------------------------------------------------------------------------
