@@ -1,6 +1,8 @@
 Changes for Labyrinth-Plugin-Album
 ==================================
 
+        - added functional tests for Selection method. (Pages)
+
 1.11	2015-03-15
         - added functional tests for View, Random, Gallery & Albums methods.
           (Photos)
